--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="styles.css">
+</head>
+<body>
 <p1>hello</p1>
-
+</body>
 
 
 
