--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background:black">
 <p1>hello</p1>
 </body>
 
