--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 </head>
 <body style="background:black">
-<p1>hello</p1>
+
+<p1 style="color:#fdfff5">hello</p1>
+
 </body>
 
 
