--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body style="background:black">
 
-<p1 style="color:#fdfff5">hello</p1>
-
+<p1 style="color:#fdfff5">Kotlin & C++(junior), CCNA, CCNP, LPIC 101 & 102</p1>
+<p2 style="color:#fdfff5">Nothing ventured, nothing gained</p2>
 </body>
 
 
